@startuml

title __CHECKER's Class Diagram__\n

  package  {
    class Checker {
    }
  }
  

  package  {
    class Constants {
    }
  }
  

  package  {
    class Input {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class MoveException {
    }
  }
  

  package  {
    class Pawn {
    }
  }
  

  package  {
    class PawnValidator {
    }
  }
  

  package  {
    class PawnsManager {
    }
  }
  

  package  {
    class Point {
    }
  }
  

  package  {
    class Printer {
    }
  }
  

  Checker o-- PawnsManager : pawnsManager
  Checker o-- Printer : printer
  Checker o-- Input : input
  Input o-- PawnsManager : pawnsManager
  Pawn o-- PawnValidator : validator
  Pawn o-- Point : point
  Pawn o-- PLAYER : player
  PawnsManager o-- PLAYER : currentPlayer
  PawnsManager o-- Pawn : currentPawn
  Printer o-- PawnsManager : pawnsManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
